--- a/html/managestaff.html
+++ b/html/managestaff.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.2/css/dataTables.bootstrap5.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link href="./Styles/layout.css" rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
+        <link href="../css/layout.css" rel="stylesheet">
+        <link rel="stylesheet" href="../css/style.css">
     <title>Manage Staff</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
         <!-- navbar -->
         <div class='nav-container '>
             <div class='nav-list  '>
-                <img src="./assets/WeApprove black.png" class="logo ">
+                <img src="../assets/WeApprove black.png" class="logo ">
                 <div class='nav-links '>
                     <div class='link  navitemsdiv '>
                         <i class="fa-solid fa-border-all "></i>
@@ -59,7 +59,7 @@
         <div class="dropdown">
             <div
                 class="visibledropdown flex px-1 items-center  w-full h-[3.1vw] border-[1px] border-[#EAAC2980] border-solid">
-                <img src="./assets/girl.jpg" alt="" srcset="" class="userImg">
+                <img src="../assets/girl.jpg" alt="" srcset="" class="userImg">
                 <h1 class="userName vw1 font-medium text-[#707070]">Adeola Thompson</h1>
                 <!-- <i class="dropdown-toggle fa-solid fa-caret-down border-none "></i> -->
                 
@@ -67,17 +67,17 @@
             </div>
             <div class="dropdown-menu">
                 <a class="dropdown-item" data-value="1">
-                    <img src="./assets/briefcase-solid.png" alt="Image 1">
+                    <img src="../assets/briefcase-solid.png" alt="Image 1">
                     Company Profile
                 </a>
                 <hr>
                 <a class="dropdown-item" data-value="2">
-                    <img src="./assets/key-solid.png" alt="Image 2">
+                    <img src="../assets/key-solid.png" alt="Image 2">
                     Change Profile
                 </a>
                 <hr>
                 <a class="dropdown-item" data-value="3">
-                    <img src="./assets/logout.png" alt="Image 3">
+                    <img src="../assets/logout.png" alt="Image 3">
                     Logout
                 </a>
             </div>
@@ -294,7 +294,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src=" https://cdn.datatables.net/1.13.2/js/jquery.dataTables.min.js"></script>
         <script src=" https://cdn.datatables.net/1.13.2/js/dataTables.bootstrap5.min.js"></script>  
-        <script src="/js/layout.js"></script>
+        <script src="../js/layout.js"></script>
 </body>
 </html>
 <script>
