--- a/html/forgotPassword-2.html
+++ b/html/forgotPassword-2.html
@@ -56,7 +56,7 @@
         ></span>
       </div>
       <div class="right">
-        <a href="/html/index.html"><i class="fa-solid fa-house"></i> Go back home</a>
+        <a href="/html/index.html"><i class="fa-solid fa-house" style="font-size: 1.2vw;"></i> Go back home</a>
         <div
           style="
             display: flex;
@@ -76,47 +76,23 @@
           />
           <div
             class="form"
-            style="width: 100%; height: 80%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);padding: 5% 5% 10% 10%;
+            style="width: 100%; height: 80%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);padding: 15% 20%;
 "
           >
-            <div
-              style="
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: space-around;
-                height: 20%;
-              "
-            >
-              <p style="color:#D7B321"><i class="fa-solid fa-key"></i></p>
-              <p style="font-size: 1.3vw;color:#707070;font-weight:600">Forgot Password</p>
-            </div>
-            <div
-              style="
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                margin-top: 1vw;
-                height: 75%;
-                font-size: 1vw;
-                color:#707070;
-              "
-            >
-              <p >Input your Email to reset password</p>
-              <span
-                style="
-                  display: flex;
-                  flex-direction: column;
-                  justify-content: space-between;
-                "
-              >
-                <label for="">Email address</label>
-                <input type="email" style="width: 70%;padding: 0.3vw 0.1vw 0.3vw 0.1vw;border-radius: 0.25rem;border: 1px solid #707070 ;margin-top: 0.5vw;outline-color:#707070 ;" />
-              </span>
-              <button style="width: 50%; margin-top: 2vw; border: none;background-color:#D7B321;font-size: 1vw;font-weight:600;color: white;height: 2.5vw;">
-                Reset Password
-              </button>
-              <a href="/login.html" style="margin-top: 1vw"><i class="fa-solid fa-arrow-left"></i> Back to Login</a>
+            
+               <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;color: #707070;">
+                <i class="fa-regular fa-envelope"></i>
+                <p style="font-size: 1.3vw;font-weight: 600;margin-top: 0.5vw;">Check your Email</p>
+                <p style="font-size: 1vw;font-weight:400 ;">We Sent a Password Reset Link to you</p>
+               </div>
+               <div style="display:flex;flex-direction:column;justify-content: space-between;">
+                <button style="width: 90%; height:3vw; background-color: #D7B321;color: white;border: none;margin: 0 auto;">Open Email App</button>
+                <p style="font-size: 0.9vw;margin-top: 0.3vw;text-align: center;">
+                  Didn't recieve an email?
+                 <span>Click here to resend</span>
+                </p>
+                <a style="text-align: start;font-size: 0.9vw;"><i class="fa-solid fa-arrow-left"></i> Back to Login</a>
+               </div>
             </div>
           </div>
         </div>
