--- a/html/managedept.html
+++ b/html/managedept.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.2/css/dataTables.bootstrap5.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <link href="../css/layout.css" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
-    <title>Manage Staff</title>
+    <link href="../css/layout.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Manage Department</title>
 </head>
 <body>
     <div>
@@ -121,7 +121,10 @@
        
     </tbody>
 </table>
+<!-- add department modal -->
 </div>
+
+
 </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
