--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
             <a href="" class="indexnavigationitem">Features</a>
             <a href="" class="indexnavigationitem">Pricing</a>
             <a href="" class="indexnavigationitem">Testimonials</a>
-            <a href="/Login.html" class="indexPortalLogin">Portal Login</a>
+            <a href="../html/login.html" class="indexPortalLogin">Portal Login</a>
         </div>
     </div>
 
