--- a/html/managestaff.html
+++ b/html/managestaff.html
@@ -343,7 +343,7 @@
                         <div
                             class="visiblenewstaffmodaldropdown flex px-1 items-center justify-between w-full h-[3.1vw] border-[1px] border-[#EAAC2980] border-solid">
                             <h1 class="newstaffmodalstatus">inactive</h1>
-                            <i class="newstaffmodaldropdown-toggle fa-solid fa-caret-down border-none "></i>
+                            <i class="newstaffmodaldropdown-toggle fa-solid fa-caret-down border-none " id="newstaffmodaldropdown-toggle"></i>
                         </div>
 
                         <div class="newstaffmodaldropdown-menu">
