--- a/modals/editDepartment.html
+++ b/modals/editDepartment.html
@@ -8,10 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="newdepartmentModalcontainer" id="newdepartmentModalcontainer">
+    <div class="newdepartmentModalcontainer" id="editdepartmentModalcontainer">
         <div class="newdepartmentform">
             <div class="newdepartmentmodaltittlediv">
-                <h1 class="newdepartmentmodaltitle">Add New Department</h1>
+                <h1 class="newdepartmentmodaltitle">Edit Department</h1>
                 <i class="fa-solid fa-circle-xmark newdepartmentdropdowncanclebtn"></i>
             </div>
             <div class="newdepartmentmodalinputsdiv">
@@ -32,9 +32,15 @@
                     <input type="email" placeholder=" Enter SEQ Number" class="newdepartmentmodalinputs" />
                 </div>
             </div>
-            <button class="newdepartmentmodaladdstaffbtn">
-                <h1>Add</h1>
-            </button>
+            <div class="newdepartmentmodaladdstaffbtns">
+                <button class="editdepartmentmodaladdstaffbtns" style="background-color: #A5A5A5;">
+                    Close
+                </button>
+                <button class="editdepartmentmodaladdstaffbtns" style="background-color: #D7B321;">
+                    Update
+                </button>
+            </div>
+            
         </div>
     </div>
     </div>
