--- a/html/managestaff.html
+++ b/html/managestaff.html
@@ -111,7 +111,7 @@
             <th class="r1-col">Staff Name</th>
             <th class="r2-col">Department</th>
             <th class="r3-col">Assign Role</th>
-            <th class="r4-col">Action</th>
+            <th class="r4-col" style="text-align:center;">Action</th>
         </tr>
     </thead>
     <tbody class="pl-3">
