--- a/html/_Layout.html
+++ b/html/_Layout.html
@@ -23,6 +23,14 @@
                         <i class="fa-solid fa-border-all "></i>
                         <a href="./dashboard.html" class='anchor '>Dashboard</a>
                     </div>
+                    <div class='link  navitemsdiv '>
+                        <i class="fa-solid fa-border-all "></i>
+                        <a href="./processmemo.html" class='anchor '>Process Memo</a>
+                    </div>
+                    <div class='link  navitemsdiv'>
+                        <i class="fa-solid fa-border-all "></i>
+                        <a href="./raisememo.html" class='anchor '>Raise Memo</a>
+                    </div>
                     <div class='link  text-[#707070] hover:text-[#D40E1F] navitemsdiv font-medium w-full flex items-center px-[5%] h-[8vh] rounded-[0.2vw] text-[0.9vw] mb-[3%]'>
                         <i class="fa-solid fa-user-tie text-[1.22vw]"></i>
                         <a href="./managestaff.html" class='anchor ml-[8%]'>Manage Staff</a>
