--- a/html/forgotPassword-2.html
+++ b/html/forgotPassword-2.html
@@ -31,6 +31,7 @@
       }
       a{
         text-decoration: none;
+        color: #334AFF;
       }
     </style>
   </head>
@@ -91,7 +92,7 @@
                   Didn't recieve an email?
                  <span>Click here to resend</span>
                 </p>
-                <a style="text-align: start;font-size: 0.9vw;"><i class="fa-solid fa-arrow-left"></i> Back to Login</a>
+                <a style="text-align: start;font-size: 0.9vw;color: #334AFF;cursor: pointer;" href="/html/index.html" ><i class="fa-solid fa-arrow-left" ></i> Back to Login</a>
                </div>
             </div>
           </div>
