--- a/html/register.html
+++ b/html/register.html
@@ -7,7 +7,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/register.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
     <title>Onboarding</title>
+
+    <style>
+ .password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 200px;
+  justify-content: space-between;
+   border: 1px solid black;
+}
+
+.password-container > #password {
+    width: 90% !important;
+    border: none !important;
+    outline: none !important;
+    color: #a9a9a9;
+    padding: 15px;
+    height: 16px !important;
+}
+
+.password-container > input[type="text"] {
+  width: 100% !important;
+    border: none !important;
+    outline: none !important;
+    color: #a9a9a9;
+    padding: 15px;
+}
+
+
+#toggle-password {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+#toggle-password:focus {
+  outline: none;
+}
+
+#password {
+   /* add padding to make space for the icon */
+  width:100% !important;
+  border-radius: 0.375rem;
+}
+
+    </style>
 </head>
 
 <body>
@@ -58,20 +111,22 @@
                                 <div class="section-flex">
                                     <div class="password">
                                         <label for="password" class="pass">Password</label>
-                                        <div class="confirm">
-                                            <input class="password-input" type="text" placeholder="***********"
-                                            required>
-                                        <img src="../assets/Icon feather-eye.png" class="eye">
+                                        <div class="password-container">
+                                            <input type="password" id="password" name="password" placeholder="Enter your password" />
+                                            <button type="button" id="toggle-password">
+                                                <i class="fas fa-eye"></i>
+                                            </button>
                                         </div>
                                         
                                     </div>
                                     <div class="confirm-password">
                                         <label for="confirm-password" class="pass">Confirm Password</label>
-                                        <div class="confirm">
-                                            <input class="password-input" type="text" placeholder="" required>
-                                            <!-- <img src="../assets/Icon feather-eye.png" class="eye"> -->
-                                        </div>
-                                        
+                                        <div class="password-container">
+                                            <input type="password" id="password" name="password" placeholder="Enter your password" />
+                                            <button type="button" id="toggle-password">
+                                                <i class="fas fa-eye"></i>
+                                            </button>
+                                        </div>                                      
                                     </div>
                                 </div>
                             </div>
@@ -135,10 +190,9 @@
                             </div>
                         </div>
                         <div class="submit">
-                            <button type="submit" class="button">
-
+                            <a href="./chooseplan.html" type="submit" class="button" >
                                 Register
-                            </button>
+                            </a>
 
                         </div>
 
@@ -197,6 +251,18 @@
             document
             .getElementById("addNewDeptbtn")
             .addEventListener("click", toggleNewDeptModal);
+
+            // toggle password visibility
+            const togglePassword = document.querySelector('#toggle-password');
+                const password = document.querySelector('#password');
+
+                togglePassword.addEventListener('click', function () {
+                    const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+                    password.setAttribute('type', type);
+                    this.querySelector('i').classList.toggle('fa-eye');
+                    this.querySelector('i').classList.toggle('fa-eye-slash');
+                });
+
     </script>
 </body>
 
