--- a/html/forgotpassword.html
+++ b/html/forgotpassword.html
@@ -20,6 +20,7 @@
         height: 100vh;
         overflow: hidden;
         display: flex;
+        color: #A5A5A5;
       }
       .right,
       .left {
@@ -76,7 +77,7 @@
           />
           <div
             class="form"
-            style="width: 100%; height: 80%; box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);padding: 5% 5% 10% 10%;
+            style="width: 100%; height: 80%; box-shadow: 0 0 10px #A5A5A5;padding: 5% 5% 10% 10%;
 "
           >
             <div
@@ -88,8 +89,8 @@
                 height: 20%;
               "
             >
-              <p style="color:#D7B321"><i class="fa-solid fa-key"></i></p>
-              <p style="font-size: 1.3vw;color:#707070;font-weight:600">Forgot Password</p>
+              <p style="color:#D7B321;"><i class="fa-solid fa-key"></i></p>
+              <p style="font-size: 1.3vw;color:#A5A5A5;font-weight:600">Forgot Password</p>
             </div>
             <div
               style="
@@ -99,7 +100,7 @@
                 margin-top: 1vw;
                 height: 75%;
                 font-size: 1vw;
-                color:#707070;
+                color:#A5A5A5;
               "
             >
               <p >Input your Email to reset password</p>
@@ -111,18 +112,22 @@
                 "
               >
                 <label for="">Email address</label>
-                <input type="email" style="width: 70%;padding: 0.3vw 0.1vw 0.3vw 0.1vw;border-radius: 0.25rem;border: 1px solid #707070 ;margin-top: 0.5vw;outline-color:#707070 ;" />
+                <input type="email" style="width: 70%;padding: 0.3vw 0.5vw 0.3vw 0.5vw;border-radius: 0.25rem;border: 1px solid #A5A5A5 ;margin-top: 0.5vw;outline-color:#A5A5A5 ;color: #A5A5A5;" />
               </span>
-              <button style="width: 50%; margin-top: 2vw; border: none;background-color:#D7B321;font-size: 1vw;font-weight:600;color: white;height: 2.5vw;">
+              <button id="reset-password" style="width: 50%; margin-top: 2vw; border: none;background-color:#D7B321;font-size: 1vw;font-weight:600;color: white;height: 2.5vw;">
                 Reset Password
               </button>
-              <a href="/login.html" style="margin-top: 1vw"><i class="fa-solid fa-arrow-left"></i> Back to Login</a>
+              <a href="/html/login.html" style="margin-top: 1vw"><i class="fa-solid fa-arrow-left"></i> Back to Login</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-
+    <script>
+      document.getElementById('reset-password').addEventListener('click',()=>{
+        window.location.replace('/html/forgotPassword-2.html')
+      })
+    </script>
     <script src="./js/login.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
