--- a/html/managedept.html
+++ b/html/managedept.html
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <button class="newdepartmentmodaladdstaffbtn">
-                <h1>Add</h1>
+                Add
             </button>
         </div>
     </div>
@@ -155,8 +155,7 @@
 </div>
 
 
-</div>
-    
+</div>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
