--- a/html/chooseplan.html
+++ b/html/chooseplan.html
@@ -8,6 +8,7 @@
     <link href="../css/layout.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
     <link href="../css/hover.css" rel="stylesheet">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -57,6 +58,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- navbar on small screens -->
     </div>
 
     <!-- Dropdown menu -->
@@ -90,12 +93,11 @@
 
     </div>
 
-    <div class="container">
-        <main role="main" class="">
-        <div class="pricingdiv">
+    <div class="" style="background-color: green ;margin: 0 auto;">
+        <div class="pricingdiv" >
             <h3 class="chooseaplanheading">Choose Plan</h3>
-            <div class="plansDiv">
-                <div class="planDiv price-card ">
+            <div class="plansDiv" >
+                <div class="planDiv price-card " style="background-color:yellow ;">
                     <h4 class="planDivPlanName">Basic Plan
                     </h4>
                     <div class='planDivPlanPrice price'>
@@ -178,7 +180,6 @@
                 </div>
             </div>
         </div>
-        </main>
     </div>
     <script>
         const dropdownToggle = document.querySelector('.dropdown-toggle');
