--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
         <p class="discovermore">Discover more of what WeApprove can do for your organization</p>
         <div class="featurecarddiv">
             <div class="feature-card">
-                <img src="../assets/Group 4.png" alt="" class="featurecardImg rounded-full  w-[30%]">
+                <img src="../assets/Group 4.png" alt="" class="featurecardImg">
                 <h1 class="featureCardHeading">Easily Budgets Organizational</h1>
                 <p class="featureCardText">Manage your memos and budgets through an intuitive dashboard</p>
             </div>
