--- a/html/setPassword.html
+++ b/html/setPassword.html
@@ -21,6 +21,15 @@
         overflow: hidden;
         display: flex;
       }
+      @media (max-width:1199px) {
+       .forgotPassword{
+        flex-direction: column;
+       }
+        /* .right,
+      .left {
+        width: 100%;
+      } */
+      }
       .right,
       .left {
         width: 50%;
