--- a/html/PreviewStaff.html
+++ b/html/PreviewStaff.html
@@ -11,6 +11,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <link href="../css/layout.css" rel="stylesheet">
         <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/tables.css">
     <title>Preview Staff</title>
 </head>
 <body>
@@ -19,6 +20,54 @@
         <div class='nav-container '>
             <div class='nav-list  '>
                 <img src="../assets/WeApprove black.png" class="logo ">
+                <div class='nav-links'>
+                    <div class='link  navitemsdiv '>
+                        <i class="fa-solid fa-border-all "></i>
+                        <a href="./dashboard.html" class='anchor '>Dashboard</a>
+                    </div>
+                    <div class='link  navitemsdiv '>
+                        <i class="fa-solid fa-border-all "></i>
+                        <a href="./processmemo.html" class='anchor '>Process Memo</a>
+                    </div>
+                    <div class='link  navitemsdiv'>
+                        <i class="fa-solid fa-border-all "></i>
+                        <a href="./raisememo.html" class='anchor '>Raise Memo</a>
+                    </div>
+                    <div
+                        class='link  text-[#707070] hover:text-[#D40E1F] navitemsdiv font-medium w-full flex items-center px-[5%] h-[8vh] rounded-[0.2vw] text-[0.9vw] mb-[3%]'>
+                        <i class="fa-solid fa-user-tie text-[1.22vw]"></i>
+                        <a href="./managestaff.html" class='anchor ml-[8%]'>Manage Staff</a>
+                    </div>
+                    <div
+                        class='link  text-[#707070] hover:text-[#D40E1F] navitemsdiv font-medium w-full flex items-center px-[5%] h-[8vh] rounded-[0.2vw] text-[0.9vw] mb-[3%]'>
+                        <i class="fa-solid fa-suitcase text-[1.22vw]"></i>
+                        <a href="./Managedept.html" class='anchor ml-[8%]'>Manage Department</a>
+                    </div>
+                    <div
+                        class='link  text-[#707070] hover:text-[#D40E1F] navitemsdiv font-medium w-full flex items-center px-[5%] h-[8vh] rounded-[0.2vw] text-[0.9vw] mb-[3%]'>
+                        <i class="fa-solid fa-credit-card text-[1.22vw]"></i>
+                        <a href="./manageSubscription.html" class='anchor ml-[8%]'>Manage Subscription</a>
+                    </div>
+                    <div
+                        class='link  text-[#707070] hover:text-[#D40E1F] navitemsdiv font-medium w-full flex items-center px-[5%] h-[8vh] rounded-[0.2vw] text-[0.9vw] mb-[3%]'>
+                        <i class="fa-solid fa-file text-[1.22vw]"></i>
+                        <a href="./reports.html" class='anchor ml-[8%]'>Report</a>
+                    </div>
+                    <div
+                        class='link  text-[#707070] w-full hover:text-[#D40E1F] navitemsdiv font-medium flex items-center px-[5%] h-[8vh] rounded-[0.2vw] text-[0.9vw] mb-[3%]  '>
+                        <i class="fa-solid fa-arrow-right-from-bracket text-[1.22vw]"></i>
+                        <a href="" class='anchor ml-[8%]'>Log out</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- mobile nav bar -->
+        <div class="mobilenavlogodiv">
+            <i class="fa-solid fa-bars"></i>
+            <img src="../assets/WeApprove black.png" class="mobilelogo ">
+        </div>
+        <div class='mobilenav-container'>
+            <div class='nav-list'>
                 <div class='nav-links '>
                     <div class='link  navitemsdiv '>
                         <i class="fa-solid fa-border-all "></i>
@@ -53,49 +102,20 @@
             </div>
         </div>
     </div>
-    
-    <!-- Dropdown menu -->
-    <div class="dropdownDiv">
-        <div class="dropdown">
-            <div
-                class="visibledropdown flex px-1 items-center  w-full h-[3.1vw] border-[1px] border-[#EAAC2980] border-solid">
-                <img src="../assets/girl.jpg" alt="" srcset="" class="userImg">
-                <h1 class="userName vw1 font-medium text-[#707070]">Adeola Thompson</h1>
-                <!-- <i class="dropdown-toggle fa-solid fa-caret-down border-none "></i> -->
-                
-                <span class="dropdown-toggle " style="background-color: transparent !important;"></span>
-            </div>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" data-value="1">
-                    <img src="../assets/briefcase-solid.png" alt="Image 1">
-                    Company Profile
-                </a>
-                <hr>
-                <a class="dropdown-item" data-value="2">
-                    <img src="../assets/key-solid.png" alt="Image 2">
-                    Change Profile
-                </a>
-                <hr>
-                <a class="dropdown-item" data-value="3">
-                    <img src="../assets/logout.png" alt="Image 3">
-                    Logout
-                </a>
-            </div>
-        </div>
-    </div>
-    </div>
 
     <!-- table -->
-        <div class=" d-flex flex-column w-70 " style="margin-top:6.2vw; border:solid 1px #7070701D;height: fit-content;margin-left: 4.6vw;background-color: white; ">
+        <div class="table-container-general w-70">
 
-            <div class="d-flex align-items-center justify-content-between bg-white px-2 font-weight-bold font-inter text-1.4vw" style="height: 3vw ;padding-top: 0.5vw;">
-                <p class="vw1 d-flex justify-content-center align-items-center " style="height: 100%;color: #D40E1F;font-weight: bold;margin-top: 1vw;">Preview Staff</p>
-                <div class="d-flex align-items-center">
-                    <button id="addStaffbtn" class="btn  py-2 px-4 text-1vw" style="color: #D40E1F;">
-                        <i class="fa-solid fa-plus"></i> Add New Staff
+            <div class="table-control prevstaff">
+                <p class="p">Preview Staff</p>
+                <div class="btns">
+                    <button id="addStaffbtn" style="color: #D40E1F;">
+                        <i class="fa-solid fa-plus"></i> <span> Add New Staff</span>
                     </button>
-                    <button id="uploadStaffbtn" class="btn btn-outline-secondary py-2 px-4 text-1vw">
-                        <i class="fa-solid fa-arrow-up-from-bracket"></i> Upload Staff (.csv, .xls)
+                    <button id="uploadStaffbtn" class="btn btn-outline-secondary ">
+                        <i class="fa-solid fa-arrow-up-from-bracket"></i> <span>
+                            Upload Staff (.csv, .xls)
+                        </span> 
                     </button>
                 </div>
             </div>
